<resources>
    <string name="app_name">ShoppingOverview</string>
    <string name="app_version" translatable="false">Version 1.0-alpha.3, 20170225</string>
    <string name="save">Save</string>
    <string name="abort">Abort</string>
    <string name="price_format">$ %.2f</string>
    <string name="stats_format">$ %1$.2f ($ %2$.2f)</string>

    <string name="keypad_0">0</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_comma">.</string>
    <string name="keypad_delete">Delete</string>
    <string name="keypad_clear">C</string>
    <string name="keypad_ok">OK</string>

    <string name="recent_purchases">Recent purchases</string>
    <string name="add_purchase">Add purchase</string>
    <string name="OK">OK</string>
    <string name=".">,</string>
    <string name="about">About</string>
    <string name="digit_could_not_be_removed">Digit could not be removed: %1$s</string>
    <string name="digit_could_not_be_added">Digit could not be added: %1$s</string>

    <string name="settings">Settings</string>
    <string name="sources">Sources</string>
    <string name="source">Source</string>
    <string name="click_on_the_image_to_change_it">Click on the image to change it</string>
    <string name="add_source">Add source</string>
    <string name="edit_source">Edit source</string>
    <string name="please_enter_a_source_name">Please enter a source name</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_name">Category name</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="please_enter_a_category">Please enter a category</string>
    <string name="all_time">All time</string>
    <string name="last_month">Last month</string>
    <string name="current_month">Current Month</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
