<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

        <Button
            android:id="@+id/keypad7"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:text="@string/keypad_7"/>
        <Button
            android:id="@+id/keypad8"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad7"
            android:text="@string/keypad_8"/>
        <Button
            android:id="@+id/keypad9"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad8"
            android:text="@string/keypad_9"/>
        <ImageButton
            android:id="@+id/keypadDelete"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad9"
            android:contentDescription="@string/keypad_delete"
            android:src="@android:drawable/ic_input_delete"/>

        <Button
            android:id="@+id/keypad4"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_below="@id/keypad7"
            android:text="@string/keypad_4"/>
        <Button
            android:id="@+id/keypad5"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad4"
            android:layout_below="@id/keypad8"
            android:text="@string/keypad_5"/>
        <Button
            android:id="@+id/keypad6"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad5"
            android:layout_below="@id/keypad9"
            android:text="@string/keypad_6"/>
        <Button
            android:id="@+id/keypadClear"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad6"
            android:layout_below="@id/keypadDelete"
            android:text="@string/keypad_clear"/>

        <Button
            android:id="@+id/keypad1"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_below="@id/keypad4"
            android:text="@string/keypad_1"/>
        <Button
            android:id="@+id/keypad2"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad1"
            android:layout_below="@id/keypad5"
            android:text="@string/keypad_2"/>
        <Button
            android:id="@+id/keypad3"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad2"
            android:layout_below="@id/keypad6"
            android:text="@string/keypad_3"/>
        <Button
            android:id="@+id/keypadOk"
            android:layout_width="85dp"
            android:layout_height="120dp"
            android:layout_toEndOf="@id/keypad3"
            android:layout_below="@id/keypadClear"
            android:text="@string/keypad_ok"/>

        <Button
            android:id="@+id/keypad0"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_below="@id/keypad1"
            android:text="@string/keypad_0"/>
        <Button
            android:id="@+id/keypadComma"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/keypad0"
            android:layout_below="@id/keypad3"
            android:text="@string/keypad_comma"/>

</RelativeLayout>